manifests/calico/cilium-experiment/patch-kube-controllers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calico-kube-controllers
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: calico-kube-controllers
