manifests/calico/cilium-experiment/10-host-baseline-allow-all.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: cilium-experiment-host-baseline-allow
spec:
  order: 10
  selector: host_protected == "true"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
  egress:
    - action: Allow
